--- a/style.css
+++ b/style.css
@@ -269,3 +269,51 @@ button {
     font-size: 1rem;
     padding: 15px 0;
 }
+
+/* SEKCE: Reference */
+
+.card-group-reference {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 200px;
+}
+
+.reference-card {
+    width: 49%;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    transition: all 300ms ease-in-out;
+}
+
+.reference-card:hover {
+    box-shadow: 1px 1px 29px -2px rgba(0,0,0,0.27);
+    -webkit-box-shadow: 1px 1px 29px -2px rgba(0,0,0,0.27);
+    -moz-box-shadow: 1px 1px 29px -2px rgba(0,0,0,0.27);
+}
+
+.reference-card > img {
+    display: flex;
+    margin: 0 auto;
+    width: 20%;
+    height: auto;
+}
+
+.reference-card > p {
+    text-align: center;
+}
+
+.reference-citace {
+    font-size: 1.2rem;
+    padding: 20px 0 5px;
+}
+
+.reference-autor {
+    font-size: 0.9rem;
+    color: var(--light-grey);
+    margin-bottom: 20px;
+}
+
+.reference-autor > span {
+    font-size: inherit;
+    font-style: italic;
+}
