--- a/style.css
+++ b/style.css
@@ -275,7 +275,6 @@ button {
 .card-group-reference {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 200px;
 }
 
 .reference-card {
@@ -317,3 +316,96 @@ button {
     font-size: inherit;
     font-style: italic;
 }
+
+/* SEKCE: Kontakty */
+
+.contact-row-1, .contact-row-2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+input[type=text], input[type=email], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid var(--border-grey);
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+
+label {
+      font-size: 1rem;
+  }
+
+.input-field {
+      width: 49%;
+}
+
+textarea {
+    height: 200px;
+}
+
+input[type=text]:active, input[type=email]:active, select:active, textarea:active {
+    color: #212529;
+    background-color: #fff;
+    border-color: #86b7fe;
+    outline: 0;
+    box-shadow: 0 0 0 .25rem rgba(13,110,253,.25);
+}
+
+.submit-btn {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.modal {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+.modal.open {
+    visibility: visible;
+    opacity: 1;
+    transition-delay: 0s;
+  }
+
+.modal-bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+
+.modal-container {
+    border-radius: 10px;
+    background: #fff;
+    position: relative;
+    padding: 30px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  }
+
+.modal-close {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    outline: none;
+    appearance: none;
+    color: var(--greyish);
+    background: none;
+    border: 0px;
+    font-weight: bold;
+    cursor: pointer;
+  }
