--- a/style.css
+++ b/style.css
@@ -335,18 +335,18 @@ input[type=text], input[type=email], select, textarea {
     margin-top: 6px;
     margin-bottom: 16px;
     resize: vertical;
-  }
+}
 
 label {
       font-size: 1rem;
-  }
+}
 
 .input-field {
       width: 49%;
 }
 
 textarea {
-    height: 200px;
+    height: 150px;
 }
 
 input[type=text]:active, input[type=email]:active, select:active, textarea:active {
@@ -375,19 +375,21 @@ input[type=text]:active, input[type=email]:active, select:active, textarea:activ
     align-items: center;
     justify-content: center;
     text-align: center;
-  }
+    z-index: 2;
+}
 
 .modal.open {
     visibility: visible;
     opacity: 1;
     transition-delay: 0s;
-  }
+}
 
 .modal-bg {
     position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
-  }
+}
 
 .modal-container {
     border-radius: 10px;
@@ -395,7 +397,7 @@ input[type=text]:active, input[type=email]:active, select:active, textarea:activ
     position: relative;
     padding: 30px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  }
+}
 
 .modal-close {
     position: absolute;
@@ -408,4 +410,28 @@ input[type=text]:active, input[type=email]:active, select:active, textarea:activ
     border: 0px;
     font-weight: bold;
     cursor: pointer;
-  }
+}
+
+/* PATIČKA */
+
+footer {
+    padding: 20px 0;
+    margin-top: 80px;
+    background-color: var(--blackish);
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    align-items: center;
+    max-width: 1300px;
+}
+
+.footer-text {
+    color: #FFF !important; 
+}
+
+.footer-text-info {
+    font-size: 1rem;
+}
