Firefox Flexbox Fix

--- a/style.css
+++ b/style.css
@@ -254,6 +254,7 @@ button {
 
 .portfolio-card {
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    width: 33%; /* Firefox fix */
 }
 
 .portfolio-card:not(:last-child) {
